@@ -1,4 +1,0 @@
-2f1d6d4f900af59920378c0d2a5af695  misc/iRedAdmin-0.2.2.tar.bz2
-e60d5fc120517062ea388c47739742b3  misc/roundcubemail-0.9.2.tar.gz
-169d528bd4d19abcb05506566b9b4109  misc/iRedAPD-1.4.1.tar.bz2
-ad8f05cef0c443d9ce2940bf36319c24  misc/phpPgAdmin-5.1.tar.bz2
