@@ -33,6 +33,7 @@ auth_verbose_passwords = no
 # http://wiki2.dovecot.org/SSL/DovecotConfiguration
 ssl = required
 verbose_ssl = no
+#ssl_ca =</path/to/ca
 ssl_cert = <PH_SSL_CERT
 ssl_key = <PH_SSL_KEY
 
